--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
+    "postcss": "^8.2.10",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "webpack": "^5.27.2",
